--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -11,7 +11,7 @@
 
 <CustomContainer>
     <MudItem sm="12" style="padding: 6px;"/>
-    <MudItem sm="12" md="8" lg="8">
+    <MudItem sm="12" md="8">
         @if (_isMainLoading)
         {
             <CustomCard StyleParameter="height: 40vh;">
@@ -45,7 +45,7 @@
         }
 
     </MudItem>
-    <MudItem sm="12" md="4" lg="4">
+    <MudItem sm="12" md="4">
         @if (_isMainLoading)
         {
             <CustomCard StyleParameter="height: 40vh;">
@@ -89,7 +89,7 @@
             </CustomInfoCard>
         }
     </MudItem>
-    <MudItem sm="12" md="6" lg="6">
+    <MudItem sm="12" md="6">
         @if (_isMainLoading)
         {
             <CustomCard StyleParameter="height: 40vh;">
@@ -135,7 +135,7 @@
             </CustomInfoCard>
         }
     </MudItem>
-    <MudItem sm="12" md="6" lg="6">
+    <MudItem sm="12" md="6">
         @if (_isMainLoading)
         {
             <CustomCard StyleParameter="height: 40vh;">
