--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
@@ -15,7 +15,7 @@
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="mt-4 mb-4"/>
             <MudGrid Spacing="2">
-                <CustomLabelAndLabel FirstText="အရင်ဝယ်စျေး" SecondText="@($"{_lastPrice.ToString()} mmk")"/>
+                <CustomLabelAndLabel FirstText="အရင်ဝယ်စျေး" SecondText="@($"{_lastPrice.ToString()} ကျပ်")"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
@@ -26,7 +26,7 @@
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
-                <CustomLabelAndLabel FirstText="စုစုပေါင်း" SecondText="@($"{TotalPrice} mmk")"/>
+                <CustomLabelAndLabel FirstText="စုစုပေါင်း" SecondText="@($"{TotalPrice} ကျပ်")"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
         </DialogContent>
