--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
@@ -14,10 +14,10 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="ကျသင့်‌ငွေ" SecondText="@($"{SubTotal.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="ကျသင့်‌ငွေ" SecondText="@($"{SubTotal.ToString()} ကျပ်")"/>
             @* Todo *@
             <CustomLabelAndInput FirstText="လျော့စျေး">
-                <MudItem sm="3" md="3" lg="3" Class="align-self-center">
+                <MudItem sm="3" md="3" Class="align-self-center">
                     <MudSelect T="string"
                                Value="@_selectedDiscountType"
                                ValueChanged="DiscountTypeValueChanged"
@@ -28,7 +28,7 @@
                         <MudSelectItem Value="@("%")"/>
                     </MudSelect>
                 </MudItem>
-                <MudItem sm="4" md="4" lg="4" Class="align-self-center">
+                <MudItem sm="4" md="4" Class="align-self-center">
                     <MudTextField T="long"
                                   Value="@_discount"
                                   ValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, true))"
@@ -44,10 +44,10 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="စုစုပေါင်းကျငွေ" SecondText="@($"{Total.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="စုစုပေါင်းကျငွေ" SecondText="@($"{Total.ToString()} ကျပ်")"/>
             @if (CustomerName is not null)
             {
-                <CustomLabelAndLabel FirstText="ပေးရန်စုစုပေါင်း" SecondText="@($"{GrandTotal.ToString()} mmk")"/>
+                <CustomLabelAndLabel FirstText="ပေးရန်စုစုပေါင်း" SecondText="@($"{GrandTotal.ToString()} ကျပ်")"/>
                 <CustomLabelAndLongField
                     FirstText="ပေးငွေစုစုပေါင်း" BindValue="@PaidTotal" BindValueChanged="@TotalPaidValueChanged" Required="true"/>
             }
@@ -64,7 +64,7 @@
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <CustomLabelAndInput FirstText="မှတ်ချက်">
-                <MudItem sm="7" md="7" lg="7" Class="align-self-center">
+                <MudItem sm="7" md="7" Class="align-self-center">
                     <MudTextField T="string" @bind-Value="Remark"
                                   FullWidth="true" InputType="InputType.Text"
                                   Margin="Margin.Dense" Variant="Variant.Outlined"/>
@@ -89,21 +89,21 @@
     [Parameter] public string? CustomerName { get; set; }
     [Parameter] public long CustomerExistingCreditDebit { get; set; }
     [Parameter] public long SubTotal { get; set; }
-
+    
+    [Parameter] public long Discount { get; set; }
+    [Parameter] public long DeliveryFees { get; set; }
+    [Parameter] public long Total { get; set; }
+    [Parameter] public long GrandTotal { get; set; }
+    [Parameter] public long PaidTotal { get; set; }
+    [Parameter] public long CreditDebitLeftTransaction { get; set; }
+    [Parameter] public string? Remark { get; set; }
+    
     string? _customerExistingCreditDebitString;
     string? _totalCreditDebitLeftString = "0 ကျပ်";
     string? _selectedDiscountType = "ကျပ်";
 
     long _discount;
-
-    long Discount { get; set; }
-    long DeliveryFees { get; set; }
-    long Total { get; set; }
-    long GrandTotal { get; set; }
-    long PaidTotal { get; set; }
-    long CreditDebitLeftTransaction { get; set; }
-    string? Remark { get; set; }
-
+    
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
