--- a/Friday.ERP.Client/Pages/Settings/Index.razor
+++ b/Friday.ERP.Client/Pages/Settings/Index.razor
@@ -9,16 +9,16 @@
 @attribute [Authorize]
 
 <CustomContainer>
-    <CustomPage Sm="6" Md="6" IsLoading="@_isMainLoading">
+    <CustomPage Sm="12" Md="6" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
-            <MudItem sm="12" md="12" lg="12" Class="align-self-center">
+            <MudItem sm="12" md="12" Class="align-self-center">
                 <MudText Typo="Typo.h6">
                     ဆိုင်အကြောင်း
                 </MudText>
             </MudItem>
         </MudGrid>
         <MudGrid Spacing="2">
-            <MudItem sm="12" md="12" lg="12" Class="d-flex justify-center">
+            <MudItem sm="12" md="12" Class="d-flex justify-center">
                 <MudImage Src="@ShopImage" Width="100" Height="100" Elevation="0"/>
             </MudItem>
         </MudGrid>
@@ -43,9 +43,9 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
     </CustomPage>
-    <CustomPage Sm="6" Md="6" IsLoading="@_isMainLoading">
+    <CustomPage Sm="12" Md="6" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
-            <MudItem sm="12" md="12" lg="12" Class="align-self-center">
+            <MudItem sm="12" md="12" Class="align-self-center">
                 <MudText Typo="Typo.h6">
                     ဆက်တင်များ
                 </MudText>
