--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
@@ -59,7 +59,7 @@
                                     <MudTd DataLabel="Phone">@(context.Phone ?? "N/A")</MudTd>
                                     <MudTd DataLabel="Email">@(context.Email ?? "N/A")</MudTd>
                                     <MudTd DataLabel="Address">@context.Address</MudTd>
-                                    <MudTd DataLabel="Total Credit Debit Left">@context.TotalCreditDebitLeft</MudTd>
+                                    <MudTd DataLabel="Total Credit Debit Left">@($"{context.TotalCreditDebitLeft:#,0}")</MudTd>
                                     <MudTd DataLabel="Action">
                                         <CustomButton
                                             Label="ပြောင်းရန်"
@@ -122,7 +122,7 @@
                                     <MudTd DataLabel="Phone">@(context.Phone ?? "N/A")</MudTd>
                                     <MudTd DataLabel="Email">@(context.Email ?? "N/A")</MudTd>
                                     <MudTd DataLabel="Address">@context.Address</MudTd>
-                                    <MudTd DataLabel="Total Credit Debit Left">@context.TotalCreditDebitLeft</MudTd>
+                                    <MudTd DataLabel="Total Credit Debit Left">@($"{context.TotalCreditDebitLeft:#,0}")</MudTd>
                                     <MudTd DataLabel="Action">
                                         <CustomButton
                                             Label="ပြောင်းရန်"
