--- a/Friday.ERP.Client/Pages/Purchase/Components/Templates/CustomCardRectangle.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Components/Templates/CustomCardRectangle.razor
@@ -38,10 +38,10 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column align-self-center">
-                    <MudText Typo="Typo.body2">
+                    <MudText Typo="Typo.body2" Align="Align.End">
                         <b> @SecondMainText</b>
                     </MudText>
-                    <MudText Typo="Typo.body2" Class="mt-2" Align="Align.Start">
+                    <MudText Typo="Typo.body2" Class="mt-2" Align="Align.End">
                         @SecondSubText
                     </MudText>
                 </div>
